# codex.rodion.pro

./: .env.example  .gitignore  AGENTS.md  README.md  build-native-agent.bat  codex-mobile-controller-sdd.md  package.json  pnpm-lock.yaml  start-agent.bat  start-native-agent.bat  stop-agent.bat
apps/agent-windows/: agent.config.example.json  package.json
apps/agent-windows/src/: codex-runner.ts  config.ts  index.ts  local-activity.ts  local-chat-sync.ts  process-utils.ts  redact.ts  repo-scanner.ts  types.ts  vscode-bridge.ts
apps/desktop-agent/: README.md  index.html  package.json
apps/desktop-agent/src/: main.tsx  styles.css
apps/desktop-agent/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-agent/src-tauri/src/: main.rs
apps/server/: Dockerfile  package.json
apps/server/src/: auth.ts  cli.ts  config.ts  db.ts  index.ts
apps/vscode-bridge/: package.json  tsconfig.json
apps/vscode-bridge/src/: extension.ts  vscode.d.ts
apps/web/: index.html  package.json  tsconfig.json
apps/web/public/: manifest.webmanifest  sw.js
apps/web/src/: main.tsx  styles.css
docs/: DECISIONS.md  OAUTH.md
infra/: Caddyfile  docker-compose.yml
scripts/: prepare-vscode-bridge.ps1  run-agent.ps1  stop-desktop-agent-dev-server.ps1  stop-legacy-agent-processes.ps1
