[package]
name = "codex-desktop-agent"
version = "0.1.0"
description = "Native tray manager for codex.rodion.pro agent"
authors = ["Rodion"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
keyring = "3"
open = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
